--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ body {
     backdrop-filter: blur(3px);
 }
 
-/* CONTEÚDO PRINCIPAL */
+/* CONTEUDO PRINCIPAL */
 .main-content {
     margin-left: 70px;
     /* Ajustado para navbar fechada */
